[gd_scene load_steps=9 format=3 uid="uid://ckwc2bsp51ajw"]

[ext_resource type="Script" uid="uid://dorogo8g041xp" path="res://Scripts/Location Scripts/NightBedroom.gd" id="1_6d2n5"]
[ext_resource type="Texture2D" uid="uid://dh5qeemsxf5fk" path="res://Assets/Character/WakingLifeRoomFlat-Sheet.png" id="2_0qbg8"]
[ext_resource type="PackedScene" uid="uid://ci8tq41h0yu8i" path="res://Scenes/Player Scenes/AwakePlayer.tscn" id="3_5pe6r"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tyiyt"]
radius = 17.8564
height = 71.4257

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wyebl"]
size = Vector2(720, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okb8c"]
size = Vector2(712, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nqefp"]
size = Vector2(138, 616)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dn5n5"]
size = Vector2(264.5, 110.25)

[node name="NightBedroom" type="Control"]
layout_mode = 3
anchor_right = 0.709
anchor_bottom = 0.731
offset_right = 7.69995
offset_bottom = 0.299988
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6d2n5")

[node name="TheRoom" type="Area2D" parent="."]

[node name="RoomSprite" type="Sprite2D" parent="TheRoom"]
texture_filter = 1
position = Vector2(256, 264)
scale = Vector2(4, 4)
texture = ExtResource("2_0qbg8")
vframes = 6
frame = 5

[node name="Camera2D" type="Camera2D" parent="TheRoom"]
position = Vector2(256, 264)
zoom = Vector2(1.4, 1.4)

[node name="AwakePlayer" parent="TheRoom" instance=ExtResource("3_5pe6r")]
position = Vector2(392, 352)

[node name="Bed" type="Area2D" parent="TheRoom"]

[node name="Footofbed" type="CollisionShape2D" parent="TheRoom/Bed"]
position = Vector2(304, 480)
rotation = 1.0472
shape = SubResource("CapsuleShape2D_tyiyt")

[node name="RoomBounds" type="StaticBody2D" parent="TheRoom"]
position = Vector2(256, 264)

[node name="FloorBox" type="CollisionShape2D" parent="TheRoom/RoomBounds"]
z_index = 1
position = Vector2(0, 264)
shape = SubResource("RectangleShape2D_wyebl")

[node name="CeilBox" type="CollisionShape2D" parent="TheRoom/RoomBounds"]
z_index = 1
position = Vector2(4, -264)
shape = SubResource("RectangleShape2D_okb8c")

[node name="LeftWallBox" type="CollisionShape2D" parent="TheRoom/RoomBounds"]
z_index = 1
position = Vector2(-288, 0)
shape = SubResource("RectangleShape2D_nqefp")

[node name="RightWallBox" type="CollisionShape2D" parent="TheRoom/RoomBounds"]
z_index = 1
position = Vector2(288, -4)
shape = SubResource("RectangleShape2D_nqefp")

[node name="BedBox" type="CollisionShape2D" parent="TheRoom/RoomBounds"]
position = Vector2(-83.75, 175.125)
shape = SubResource("RectangleShape2D_dn5n5")

[connection signal="body_entered" from="TheRoom/Bed" to="." method="_on_bed_body_entered"]
[connection signal="body_exited" from="TheRoom/Bed" to="." method="_on_bed_body_exited"]
